bugfix: Fixed overflow of map with sidebar extended

--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -1,6 +1,7 @@
 body, html, .wrapper, #map {
 	height: 100%;
 	width: 100%;
+	overflow-x:hidden;
 }
 
 body, html {
